# WindowsAgent

./: .gitignore  Makefile.am  configure.ac
Agent/: Makefile.am
ComHTTP/: Makefile.am
Download/: Makefile.am
OCSInventory_Front/: ComProvider.cpp  ComProvider.h  Config.cpp  Config.h  ConnexionAbstract.h  ConnexionLocal.cpp  ConnexionLocal.h  Deviceid.cpp  Deviceid.h  DownloadRequest.cpp  DownloadRequest.h  ExecCommand.cpp  ExecCommand.h  FilePackageHistory.cpp  FilePackageHistory.h  InventoryRequest.cpp  InventoryRequest.h  Log.cpp  Log.h  Makefile.am  Markup.cpp  Markup.h  NotifyUser.cpp  NotifyUser.h  OCSInventoryFront.cpp  OCSInventoryFront.h  OCSInventoryFrontClasses.h  OCSInventoryState.cpp  OCSInventoryState.h  OcsUtils.cpp  OcsUtils.h  PrologResponse.cpp  PrologResponse.h  ProviderClasses.h  RequestAbstract.cpp  RequestAbstract.h  ResponseAbstract.h  ServerConfig.h  Zip.h  commonDownload.cpp  (+1 more)
OcsNotifyUser/: Makefile.am
OcsSystray/: Makefile.am
OcsWmi/: Makefile.am
Service/: Makefile.am
SysInfo/: Makefile.am
TestSysInfo/: Makefile.am
