ACLOCAL_AMFLAGS= '-I m4'
windowsagent_LIB = agent
#SUBDIRS = Agent ComHTTP Download logon NSIS_agent_setup OCSInventory_Front OcsNotifyUser OCSPlugin_Example OcsSystray OcsWmi Portable_Scripts Pre_Installed_Plugins Service SysInfo TestSysInfo
SUBDIRS = Agent ComHTTP Download OCSInventory_Front OcsNotifyUser OcsSystray OcsWmi Service SysInfo TestSysInfo
