bin_PROGRAMS = ocsinventoryfront

INCLUDES = -I@top_builddir@/External_Deps/tinyxml/

ocsinventoryfront_SOURCES = commonDownload.cpp ComProvider.cpp Config.cpp ConnexionAbstract.cpp ConnexionLocal.cpp Deviceid.cpp DownloadRequest.cpp DownloadResponse.cpp ExecCommand.cpp FilePackageHistory.cpp flate.cpp InventoryRequest.cpp InventoryResponse.cpp Log.cpp MapStringToStringArray.cpp Markup.cpp NotifyUser.cpp OCSInventory Front.cpp OCSInventoryState.cpp OcsUtils.cpp PrologRequest.cpp PrologResponse.cpp RequestAbstract.cpp Request.cpp ResponseAbstract.cpp Response.cpp ServerConfig.cpp Singleton.cpp stdafx.cpp XMLInteract.cpp Zip.cpp
