sysinfo_SOURCES = AccessLog.cpp bios.cpp Cpu.cpp CpuList.cpp DebugLog.cpp DetectVM.cpp DeviceProperties.cpp DiskInfo.cpp DMI.cpp Dtwinver.cpp EDID.cpp FileVersion.cpp InputDevice.cpp InputDeviceList.cpp IPHelper.cpp ISA_PNPID.cpp LogicalDrive.cpp LogicalDriveList.cpp Memory.cpp MemorySlot.cpp MemorySlotList.cpp Modem.cpp ModemList.cpp Monitor.cpp MonitorList.cpp NetworkAdapter.cpp NetworkAdapterList.cpp OcsCrypto.cpp OcsProcess.cpp Printer.cpp PrinterList.cpp Registry.cpp RegistryValue.cpp RegistryValueList.cpp Software.cpp SoftwareList.cpp SoundDevice.cpp SoundDeviceList.cpp stdafx.cpp StoragePeripheral.cpp StoragePeripheralList.cpp SysInfo.cpp SystemController.cpp SystemControllerList.cpp SystemPort.cpp SystemPortList.cpp SystemSlot.cpp SystemSlotList.cpp VideoAdapter.cpp VideoAdapterList.cpp VMSystem.cpp WindowsSocket.cpp Wmi.cpp
